# Mhuixs

./: .gitignore  LICENSE.md  LICENSES.md  NOTICE  README.en.md  README.md  TEST_LOGEX.md  lib_interface_update.md  makefile  obj_cleanup_summary.md  rename_bignum_to_bhs.py  todo.list
Mhuixs/: DEMO.md  LIST_USAGE.md  Makefile  Mhuixs-dir介绍.txt  Mhuixs.c  README.md  README_PACKAGE.md  REFACTOR_PLAN.md  ast.h  bignum.c  bignum.h  builtin.h  calculator.c  context.c  context.h  error.h  evaluator.c  evaluator.h  execute.c  functable.c  interpreter.c  interpreter.h  lexer.c  lexer.h  lexer_old.c  lexer_old.h  package.c  parser.c  parser.h  test.c  test_builtin.c
Mhuixs.old/: execute.c
Mhuixs.old/datstrc/: bitmap.c  bitmap.h  list.c  list.h  tblh.c  tblhdef.h
Mhuixs.old/mhuclt/: lexer.h  lexer.txt  logo.c
Mhuixs.old/mlib/: Mhudef.h  getid.c  hook.h  stdstr.hpp  strmap.h
Mhuixs/datstrc/: bitmap.c  bitmap.cpp  bitmap.h  datstrc-dir介绍.txt  datstrc.h  datstrc.hpp  kvalh.c  kvalh.h  list.c  list.cpp  list.h  list.hpp  queue.c  queue.h  stack.c  stack.h  stream.c  stream.h  tblh.c  tblh.cpp  tblh.h  tblh.hpp  tblhdef.h  test.c
Mhuixs/history/: test-example-main.c  test-strmap-queue-list.20241213.c  test.c
Mhuixs/hub/: Mhudef.cpp  Mhudef.hpp  Mhuixs.cpp  comdq.cpp  comdq.h  env.hpp  fcall.cpp  fcall.hpp  fun.cpp  fun.h  getid.cpp  getid.hpp  hook.cpp  hook.hpp  hub.cpp  manager.cpp  manager.h  mshare.cpp  mshare.hpp  netbase.cpp  netplug.cpp  netplug.h  netplug.hpp  netptd.cpp  registry.cpp  registry.hpp  sesshub.cpp  session.c  session.cpp  session.h  session.hpp  session_example.c  session_execution.c  session_network.c  session_pool.c  usergroup.cpp  usergroup.hpp
Mhuixs/lib/: Makefile  bcrypt.c  bitcpy.h  bitmap.c  bitmap.h  kvalh.cpp  kvalh.hpp  list.c  list.h  memap.cpp  memap.hpp  mstring.h  mtype.hpp  str.cpp  str.hpp  tblh.h  test_lib_status.c  tlsf.h  uintdeque.cpp  uintdeque.hpp
Mhuixs/logex/: DEMO.md  IMPORT_GUIDE.md  Makefile  PACKAGE_GUIDE.md  bignum.c  bignum.h  calculator  context.c  context.h  evaluator.c  function.h  lexer.c
Mhuixs/mcore/: config.h  (+1 more)
Mhuixs/muixclt/Cpp/: CMakeLists.txt  clt.cpp
build_server/: CMakeCache.txt  Makefile  cmake_install.cmake
doc/: BUILTIN_FUNCTIONS.md  BYTECODE_VM.md  IMPORT_GUIDE.md  LIST_USAGE.md  LOGEX_REPL.md  NAQL.txt  NAQL_EXTENSION_DESIGN.md  PACKAGE_GUIDE.md  README_PACKAGE.md  REFACTOR_SUMMARY.md  archive  hash_optimization_guide.md  hash_quick_start.md  logex-interpreter-wrapper.md  logex_usage.md  usergroup.md
document/: HOOK的权限管理设计方案.docx  Mhuixs查询语言设计.docx
history/: queue.c
src/: Makefile  Makefile.mhuixs  Makefile.vm  Mhuixs.c  ast.c  ast.h  bignum.c  bignum.h  builtin.c  builtin.h  bytecode.c  bytecode.h  compiler.c  compiler.h  context.c  context.h  evaluator.c  evaluator.h  function.c  function.h  gll.c  interpreter.c  interpreter.h  lexer.c  lexer.h  logex.c  logex_repl.c  logex_vm.c  netplug.c  netplug.h  package.h  parser.c  parser.h  registry.h  vm.c  vm.h
test/: example.lgx  test_builtin.logex  test_builtin_simple.c  test_hash_performance.c
(+302 files in other folders)
